fixed broken css

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -150,7 +150,6 @@
   margin-bottom: 2vh;
   img{
     width: 20vw;
-    height:
     margin-left: 5vw;
   }
   span{
